@@ -20,144 +20,109 @@
 package org.xwiki.localization.script;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 
-import javax.inject.Provider;
-
-import org.apache.commons.lang3.ArrayUtils;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
-import org.xwiki.component.manager.ComponentManager;
-import org.xwiki.component.util.DefaultParameterizedType;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.xwiki.environment.Environment;
 import org.xwiki.localization.LocalizationContext;
 import org.xwiki.localization.LocalizationManager;
-import org.xwiki.localization.Translation;
-import org.xwiki.rendering.block.WordBlock;
-import org.xwiki.rendering.renderer.BlockRenderer;
-import org.xwiki.rendering.renderer.printer.WikiPrinter;
 import org.xwiki.rendering.syntax.Syntax;
-import org.xwiki.script.service.ScriptService;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.doAnswer;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.eq;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-public class LocalizationScriptServiceTest
+/**
+ * Unit tests for {@link LocalizationScriptService}.
+ *
+ * @version $Id$
+ */
+@ComponentTest
+class LocalizationScriptServiceTest
 {
-
-    @Rule
-    public MockitoComponentMockingRule<ScriptService> mocker =
-        new MockitoComponentMockingRule<ScriptService>(LocalizationScriptService.class);
-
-    private BlockRenderer renderer;
-
-    private ComponentManager componentManager;
-
-    private LocalizationContext localizationContext;
-
-    private LocalizationManager localizationManager;
-
+    @InjectMockComponents
     private LocalizationScriptService localizationScriptService;
 
-    private Translation translation;
+    @MockComponent
+    private LocalizationContext localizationContext;
 
+    @MockComponent
+    private LocalizationManager localizationManager;
+
+    @MockComponent
     private Environment environment;
 
-    @Before
-    public void setUp() throws Exception
+    @BeforeEach
+    void setUp() throws Exception
     {
-        componentManager = mock(ComponentManager.class);
-        Provider<ComponentManager> componentManagerProvider = mocker.registerMockComponent(
-            new DefaultParameterizedType(null, Provider.class, ComponentManager.class), "context");
-        when(componentManagerProvider.get()).thenReturn(componentManager);
-
-        renderer = mock(BlockRenderer.class, Syntax.PLAIN_1_0.toIdString());
-        when(componentManager.getInstance(BlockRenderer.class, Syntax.PLAIN_1_0.toIdString())).thenReturn(renderer);
-
-        localizationContext = mocker.getInstance(LocalizationContext.class);
-        localizationManager = mocker.getInstance(LocalizationManager.class);
-        localizationScriptService = (LocalizationScriptService) mocker.getComponentUnderTest();
-        translation = mock(Translation.class);
-
-        doAnswer(new Answer<Object>()
-        {
-            @Override
-            public Object answer(InvocationOnMock invocation) throws Throwable
-            {
-                WikiPrinter printer = (WikiPrinter) invocation.getArguments()[1];
-                printer.print("print result");
-                return null;
-            }
-        }).when(renderer).render(eq(new WordBlock("message")), any(WikiPrinter.class));
-        when(translation.render(Locale.ROOT, ArrayUtils.EMPTY_OBJECT_ARRAY)).thenReturn(new WordBlock("message"));
-        when(localizationManager.getTranslation("key", Locale.ROOT)).thenReturn(translation);
-        when(localizationContext.getCurrentLocale()).thenReturn(Locale.ROOT);
-
-        environment = mocker.getInstance(Environment.class);
+        when(this.localizationManager.getTranslation(eq("key"), eq(Locale.ROOT), eq(Syntax.PLAIN_1_0), any()))
+            .thenReturn("messageWithParam");
+        when(this.localizationManager.getTranslation("key", Locale.ROOT, Syntax.PLAIN_1_0)).thenReturn(
+            "messageNoParam");
+        when(this.localizationContext.getCurrentLocale()).thenReturn(Locale.ROOT);
     }
 
     @Test
-    public void render() throws Exception
+    void render()
     {
-        assertEquals("print result", localizationScriptService.render("key"));
-        assertEquals("print result",
-            localizationScriptService.render(Arrays.asList(null, "not existing key", "key", "another key")));
+        assertEquals("messageNoParam", this.localizationScriptService.render("key"));
+        assertEquals("messageNoParam",
+            this.localizationScriptService.render(Arrays.asList(null, "not existing key", "key", "another key")));
     }
 
     @Test
-    public void renderWithSyntax() throws Exception
+    void renderWithSyntax()
     {
-        assertEquals("print result", localizationScriptService.render("key", Syntax.PLAIN_1_0));
-        assertEquals("print result", localizationScriptService
+        assertEquals("messageNoParam", this.localizationScriptService.render("key", Syntax.PLAIN_1_0));
+        assertEquals("messageNoParam", this.localizationScriptService
             .render(Arrays.asList(null, "not existing key", "key", "another key"), Syntax.PLAIN_1_0));
     }
 
     @Test
-    public void renderWithSyntaxAndParameters() throws Exception
+    void renderWithSyntaxAndParameters()
     {
-        assertEquals("print result", localizationScriptService.render("key", Syntax.PLAIN_1_0, Arrays.asList()));
-        assertEquals("print result", localizationScriptService
-            .render(Arrays.asList(null, "not existing key", "key", "another key"), Syntax.PLAIN_1_0, Arrays.asList()));
+        assertEquals("messageWithParam",
+            this.localizationScriptService.render("key", Syntax.PLAIN_1_0, List.of("param")));
+        assertEquals("messageWithParam", this.localizationScriptService
+            .render(Arrays.asList(null, "not existing key", "key", "another key"), Syntax.PLAIN_1_0, List.of("param")));
     }
 
     @Test
-    public void renderWithParameters() throws Exception
+    void renderWithParameters()
     {
-        assertEquals("print result", localizationScriptService.render("key", Arrays.asList()));
-        assertEquals("print result", localizationScriptService
-            .render(Arrays.asList(null, "not existing key", "key", "another key"), Arrays.asList()));
+        assertEquals("messageWithParam", this.localizationScriptService.render("key", List.of("param")));
+        assertEquals("messageWithParam", this.localizationScriptService
+            .render(Arrays.asList(null, "not existing key", "key", "another key"), List.of("param")));
     }
 
     @Test
-    public void getCurrentLocale() throws Exception
+    void getCurrentLocale()
     {
-        when(localizationContext.getCurrentLocale()).thenReturn(Locale.ENGLISH);
-        assertEquals(Locale.ENGLISH, localizationScriptService.getCurrentLocale());
+        when(this.localizationContext.getCurrentLocale()).thenReturn(Locale.ENGLISH);
+        assertEquals(Locale.ENGLISH, this.localizationScriptService.getCurrentLocale());
     }
 
     @Test
-    public void getAvailableLocales() throws Exception
+    void getAvailableLocales()
     {
-        when(environment.getResourceAsStream(eq("/WEB-INF/xwiki-locales.txt")))
+        when(this.environment.getResourceAsStream(eq("/WEB-INF/xwiki-locales.txt")))
             .thenReturn(getClass().getResourceAsStream("/xwiki-locales.txt"));
-        Set<Locale> locales = localizationScriptService.getAvailableLocales();
+        Set<Locale> locales = this.localizationScriptService.getAvailableLocales();
         assertNotNull(locales);
         assertFalse(locales.isEmpty());
         assertTrue(locales.contains(new Locale("fr")));
         assertTrue(locales.contains(new Locale("it")));
-        assertTrue(locales.contains(new Locale("mr_IN")));
+        assertTrue(locales.contains(new Locale("mr","IN")));
         assertFalse(locales.contains(new Locale("whatever")));
     }
 }
