@@ -19,11 +19,10 @@
  */
 package org.xwiki.notifications.notifiers.internal;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-import javax.inject.Inject;
 import javax.inject.Named;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -35,7 +34,6 @@ import org.xwiki.model.reference.EntityReferenceSerializer;
 import org.xwiki.notifications.CompositeEvent;
 import org.xwiki.notifications.CompositeEventStatus;
 import org.xwiki.notifications.CompositeEventStatusManager;
-import org.xwiki.notifications.NotificationException;
 import org.xwiki.notifications.sources.NotificationParameters;
 import org.xwiki.notifications.sources.ParametrizedNotificationManager;
 import org.xwiki.rendering.async.internal.AsyncRendererResult;
@@ -54,7 +52,7 @@ import static org.mockito.Mockito.when;
  * Tests for {@link DefaultAsyncNotificationRenderer}.
  */
 @ComponentTest
-public class DefaultAsyncNotificationRendererTest
+class DefaultAsyncNotificationRendererTest
 {
     private static final String CACHE_KEY = "mykey";
     private static final DocumentReference USER_DOC_REFERENCE = new DocumentReference("xwiki", "XWiki", "Foo");
@@ -94,7 +92,7 @@ public class DefaultAsyncNotificationRendererTest
     }
 
     @Test
-    public void initialize()
+    void initialize()
     {
         this.asyncNotificationRenderer.initialize(
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
@@ -102,7 +100,7 @@ public class DefaultAsyncNotificationRendererTest
     }
 
     @Test
-    public void getId()
+    void getId()
     {
         this.asyncNotificationRenderer.initialize(
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
@@ -114,9 +112,9 @@ public class DefaultAsyncNotificationRendererTest
     }
 
     @Test
-    public void render() throws Exception
+    void render() throws Exception
     {
-        List<CompositeEvent> compositeEventList = Arrays.asList(
+        List<CompositeEvent> compositeEventList = List.of(
             mock(CompositeEvent.class),
             mock(CompositeEvent.class)
         );
@@ -136,8 +134,8 @@ public class DefaultAsyncNotificationRendererTest
         this.asyncNotificationRenderer.initialize(
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
         assertEquals(new AsyncRendererResult("Expected result!"), this.asyncNotificationRenderer.render(false, false));
-        verify(this.notificationCacheManager).getFromCache(CACHE_KEY, false);
-        verify(this.notificationCacheManager).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager).getFromCache(CACHE_KEY, false, true);
+        verify(this.notificationCacheManager).setInCache(CACHE_KEY, new ArrayList<>(compositeEventList), false, true);
 
         // Test2: get count of 2 events, without cache
         when(this.htmlNotificationRenderer.render(2)).thenReturn("Expected count result!");
@@ -145,19 +143,20 @@ public class DefaultAsyncNotificationRendererTest
             new NotificationAsyncRendererConfiguration(notificationParameters, true));
         assertEquals(new AsyncRendererResult("Expected count result!"),
             this.asyncNotificationRenderer.render(true, true));
-        verify(this.notificationCacheManager).getFromCache(CACHE_KEY, true);
-        verify(this.notificationCacheManager).setInCache(CACHE_KEY, compositeEventList, true);
+        verify(this.notificationCacheManager).getFromCache(CACHE_KEY, true, true);
+        verify(this.notificationCacheManager).setInCache(CACHE_KEY, new ArrayList<>(compositeEventList), true, true);
 
         // Test3: get 1 event with cache
-        compositeEventList = Arrays.asList(
+        compositeEventList = List.of(
             mock(CompositeEvent.class)
         );
+
         compositeEventStatusList = Arrays.asList(
             mock(CompositeEventStatus.class)
         );
         when(this.compositeEventStatusManager.getCompositeEventStatuses(compositeEventList, USER_SERIALIZED_REFERENCE))
             .thenReturn(compositeEventStatusList);
-        when(this.notificationCacheManager.getFromCache(CACHE_KEY, false)).thenReturn(compositeEventList);
+        when(this.notificationCacheManager.getFromCache(CACHE_KEY, false, true)).thenReturn(compositeEventList);
 
         when(this.htmlNotificationRenderer.render(compositeEventList, compositeEventStatusList, false))
             .thenReturn("Expected cache result!");
@@ -165,26 +164,29 @@ public class DefaultAsyncNotificationRendererTest
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
         assertEquals(new AsyncRendererResult("Expected cache result!"),
             this.asyncNotificationRenderer.render(true, false));
-        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY,
+            new ArrayList<>(compositeEventList), false, true);
 
-        when(this.notificationCacheManager.getFromCache(CACHE_KEY, true)).thenReturn(1);
+        when(this.notificationCacheManager.getFromCache(CACHE_KEY, true, true)).thenReturn(1);
         when(this.htmlNotificationRenderer.render(1))
             .thenReturn("Expected count cache result!");
         this.asyncNotificationRenderer.initialize(
             new NotificationAsyncRendererConfiguration(notificationParameters, true));
         assertEquals(new AsyncRendererResult("Expected count cache result!"),
             this.asyncNotificationRenderer.render(false, true));
-        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY,
+            new ArrayList<>(compositeEventList), false, true);
     }
 
     @Test
-    public void renderUserNull() throws Exception
+    void renderUserNull() throws Exception
     {
         notificationParameters.user = null;
-        List<CompositeEvent> compositeEventList = Arrays.asList(
+        List<CompositeEvent> compositeEventList = List.of(
             mock(CompositeEvent.class),
             mock(CompositeEvent.class)
         );
+
         when(this.notificationManager.getEvents(notificationParameters)).thenReturn(compositeEventList);
         notificationParameters.expectedCount = 2;
         when(this.htmlNotificationRenderer.render(compositeEventList, null, true))
@@ -192,13 +194,13 @@ public class DefaultAsyncNotificationRendererTest
         this.asyncNotificationRenderer.initialize(
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
         assertEquals(new AsyncRendererResult("Expected result!"), this.asyncNotificationRenderer.render(false, false));
-        verify(this.notificationCacheManager).getFromCache(CACHE_KEY, false);
-        verify(this.notificationCacheManager).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager).getFromCache(CACHE_KEY, false, true);
+        verify(this.notificationCacheManager).setInCache(CACHE_KEY, new ArrayList<>(compositeEventList), false, true);
         verify(this.compositeEventStatusManager, never()).getCompositeEventStatuses(any(), any());
     }
 
     @Test
-    public void getJobGroupPath()
+    void getJobGroupPath()
     {
         JobGroupPath jobGroupPath = new JobGroupPath(Arrays.asList("Something", "Foo", "Bar"));
         when(this.jobInitializer.getId()).thenReturn(jobGroupPath);
