@@ -20,13 +20,12 @@
 package org.xwiki.notifications.sources.internal;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import javax.inject.Named;
 
@@ -42,8 +41,6 @@ import org.xwiki.model.reference.DocumentReferenceResolver;
 import org.xwiki.model.reference.EntityReference;
 import org.xwiki.model.reference.EntityReferenceResolver;
 import org.xwiki.model.reference.EntityReferenceSerializer;
-import org.xwiki.notifications.NotificationConfiguration;
-import org.xwiki.notifications.NotificationException;
 import org.xwiki.notifications.NotificationFormat;
 import org.xwiki.notifications.filters.NotificationFilter;
 import org.xwiki.notifications.filters.NotificationFilterManager;
@@ -109,9 +106,6 @@ public class DefaultNotificationParametersFactoryTest
     private NotificationFilterPreferenceManager notificationFilterPreferenceManager;
 
     @MockComponent
-    private NotificationConfiguration configuration;
-
-    @MockComponent
     private EntityReferenceResolver<String> entityReferenceResolver;
 
     @MockComponent
@@ -127,8 +121,6 @@ public class DefaultNotificationParametersFactoryTest
     @MockComponent
     private WikiDescriptorManager wikiDescriptorManager;
 
-    private List<NotificationFilter> filterList;
-
     private List<RecordableEventDescriptor> recordableEventDescriptors;
 
     private List<NotificationPreference> mailPreferenceList;
@@ -137,40 +129,53 @@ public class DefaultNotificationParametersFactoryTest
 
     private List<NotificationFilterPreference> filterPreferenceList;
 
+    private OwnEventFilter ownEventFilter;
+    private MinorEventAlertNotificationFilter minorEventFilter;
+    private SystemUserNotificationFilter systemEventFilter;
+    private EventReadAlertFilter readEventFilter;
+    private ScopeNotificationFilter scopeFilter;
+
     @BeforeEach
-    public void setup(MockitoComponentManager componentManager) throws Exception
+    void setup(MockitoComponentManager componentManager) throws Exception
     {
         when(this.stringDocumentReferenceResolver.resolve(USER_SERIALIZED_REFERENCE)).thenReturn(USER_REFERENCE);
 
-        OwnEventFilter ownEventFilter = componentManager.registerMockComponent(OwnEventFilter.class);
+        this.ownEventFilter = componentManager.registerMockComponent(OwnEventFilter.class);
         when(ownEventFilter.getName()).thenReturn(OwnEventFilter.FILTER_NAME);
 
-        MinorEventAlertNotificationFilter minorEventFilter =
+        this.minorEventFilter =
             componentManager.registerMockComponent(MinorEventAlertNotificationFilter.class);
         when(minorEventFilter.getName()).thenReturn(MinorEventAlertNotificationFilter.FILTER_NAME);
 
-        SystemUserNotificationFilter systemEventFilter =
+        this.systemEventFilter =
             componentManager.registerMockComponent(SystemUserNotificationFilter.class);
         when(systemEventFilter.getName()).thenReturn(SystemUserNotificationFilter.FILTER_NAME);
 
-        EventReadAlertFilter readEventFilter = componentManager.registerMockComponent(EventReadAlertFilter.class);
+        this.readEventFilter = componentManager.registerMockComponent(EventReadAlertFilter.class);
         when(readEventFilter.getName()).thenReturn(EventReadAlertFilter.FILTER_NAME);
 
-        this.filterList = Arrays.asList(ownEventFilter, minorEventFilter, systemEventFilter, readEventFilter);
+        this.scopeFilter = componentManager.registerMockComponent(ScopeNotificationFilter.class);
+        when(scopeFilter.getName()).thenReturn(ScopeNotificationFilter.FILTER_NAME);
 
-        this.mailPreferenceList = Arrays.asList(mock(NotificationPreference.class), mock(NotificationPreference.class),
+        this.mailPreferenceList = List.of(mock(NotificationPreference.class), mock(NotificationPreference.class),
             mock(NotificationPreference.class));
-        this.alertPreferenceList = Arrays.asList(mock(NotificationPreference.class), mock(NotificationPreference.class),
+        this.alertPreferenceList = List.of(mock(NotificationPreference.class), mock(NotificationPreference.class),
             mock(NotificationPreference.class));
 
-        this.filterPreferenceList = Arrays.asList(mock(NotificationFilterPreference.class));
+        this.filterPreferenceList = List.of(mock(NotificationFilterPreference.class));
 
         this.recordableEventDescriptors =
-            Arrays.asList(mock(RecordableEventDescriptor.class), mock(RecordableEventDescriptor.class));
-        when(notificationFilterManager.getAllFilters(true)).thenReturn(this.filterList);
+            List.of(mock(RecordableEventDescriptor.class), mock(RecordableEventDescriptor.class));
+        when(notificationFilterManager.getAllFilters(true)).thenReturn(List.of(
+            ownEventFilter,
+            minorEventFilter,
+            systemEventFilter,
+            readEventFilter,
+            scopeFilter
+        ));
         when(notificationFilterManager.getAllFilters(USER_REFERENCE, true,
             NotificationFilter.FilteringPhase.POST_FILTERING))
-            .thenReturn(Collections.singletonList(filterList.get(1)));
+            .thenReturn(List.of(this.minorEventFilter));
 
         when(notificationPreferenceManager.getPreferences(eq(USER_REFERENCE), eq(true), same(NotificationFormat.EMAIL)))
             .thenReturn(this.mailPreferenceList);
@@ -232,15 +237,18 @@ public class DefaultNotificationParametersFactoryTest
     }
 
     @Test
-    public void createNotificationParameters() throws NotificationException
+    public void createNotificationParameters() throws Exception
     {
-        when(this.configuration.isEventPrefilteringEnabled()).thenReturn(false);
-
         NotificationParameters notificationParameters = new NotificationParameters();
         notificationParameters.format = NotificationFormat.ALERT;
-        notificationParameters.filters = new HashSet<>(this.filterList);
+        notificationParameters.filters = Set.of(
+            ownEventFilter,
+            minorEventFilter,
+            systemEventFilter,
+            readEventFilter
+        );
         notificationParameters.preferences =
-            Arrays.asList(new InternalNotificationPreference(this.recordableEventDescriptors.get(0)),
+            List.of(new InternalNotificationPreference(this.recordableEventDescriptors.get(0)),
                 new InternalNotificationPreference(this.recordableEventDescriptors.get(1)));
         assertEquals(notificationParameters,
             this.parametersFactory.createNotificationParameters(Collections.emptyMap()));
@@ -272,32 +280,20 @@ public class DefaultNotificationParametersFactoryTest
         notificationParameters.onlyUnread = true;
         notificationParameters.user = USER_REFERENCE;
         notificationParameters.expectedCount = 1258;
-        notificationParameters.blackList = Arrays.asList("foo", "bar", "baz");
+        notificationParameters.blackList = List.of("foo", "bar", "baz");
         notificationParameters.preferences = this.mailPreferenceList;
         notificationParameters.filterPreferences = this.filterPreferenceList;
-        notificationParameters.filters = Collections.singleton(this.filterList.get(1));
-
-        assertEquals(notificationParameters, this.parametersFactory.createNotificationParameters(parametersMap));
-
-        parametersMap.put(ParametersKey.FORMAT, NotificationFormat.ALERT.name());
-        notificationParameters.format = NotificationFormat.ALERT;
-        notificationParameters.preferences = this.alertPreferenceList;
-        assertEquals(notificationParameters, this.parametersFactory.createNotificationParameters(parametersMap));
-
-        when(this.configuration.isEventPrefilteringEnabled()).thenReturn(true);
-        // Prefiltering status is taken into account when getting the filters.
         when(notificationFilterManager.getAllFilters(USER_REFERENCE, true,
             NotificationFilter.FilteringPhase.POST_FILTERING)).thenReturn(Collections.emptyList());
 
-        notificationParameters.preferences =
-            Arrays.asList(new InternalNotificationPreference(this.recordableEventDescriptors.get(0)),
-                new InternalNotificationPreference(this.recordableEventDescriptors.get(1)));
-        notificationParameters.filterPreferences = Collections.emptyList();
-
-        parametersMap.put(ParametersKey.FORMAT, NotificationFormat.EMAIL.name());
-        notificationParameters.format = NotificationFormat.EMAIL;
         notificationParameters.filters =
             Collections.singleton(new ForUserEventFilter(NotificationFormat.EMAIL, null));
+        notificationParameters.preferences = List.of(
+            new InternalNotificationPreference(this.recordableEventDescriptors.get(0)),
+            new InternalNotificationPreference(this.recordableEventDescriptors.get(1))
+        );
+        notificationParameters.filterPreferences = Collections.emptyList();
+
         assertEquals(notificationParameters, this.parametersFactory.createNotificationParameters(parametersMap));
 
         parametersMap.put(ParametersKey.FORMAT, NotificationFormat.ALERT.name());
@@ -309,7 +305,11 @@ public class DefaultNotificationParametersFactoryTest
         parametersMap.put(ParametersKey.USE_USER_PREFERENCES, "false");
 
         // Don't forget that "false" in DISPLAY_XXX_EVENTS means that the filter is applied to discard those events.
-        notificationParameters.filters = new HashSet<>(Arrays.asList(filterList.get(1), filterList.get(2)));
+        notificationParameters.filters = Set.of(
+            this.minorEventFilter,
+            this.systemEventFilter,
+            this.scopeFilter
+        );
 
         List<NotificationFilterPreference> notificationFilterPreferences = new ArrayList<>();
         DefaultNotificationFilterPreference filterPref = getFilterPreference("PAGE", 0);
@@ -358,7 +358,60 @@ public class DefaultNotificationParametersFactoryTest
         parametersMap.remove(ParametersKey.CURRENT_WIKI);
         when(wikiDescriptorManager.getCurrentWikiId()).thenReturn("mywiki");
         assertEquals(notificationParameters, this.parametersFactory.createNotificationParameters(parametersMap));
-        verify(wikiDescriptorManager, times(2)).getCurrentWikiId();
+        verify(this.wikiDescriptorManager, times(3)).getCurrentWikiId();
+    }
+
+    @Test
+    void createNotificationParametersDontUseUserPreferences() throws Exception
+    {
+        when(this.wikiDescriptorManager.getCurrentWikiId()).thenReturn("mywiki");
+        when(this.wikiDescriptorManager.getMainWikiId()).thenReturn("mywiki");
+        NotificationParameters expectedNotificationParameters = new NotificationParameters();
+        expectedNotificationParameters.format = NotificationFormat.ALERT;
+        expectedNotificationParameters.preferences = List.of(
+            new InternalNotificationPreference(this.recordableEventDescriptors.get(0)),
+            new InternalNotificationPreference(this.recordableEventDescriptors.get(1))
+        );
+        expectedNotificationParameters.filters = Set.of(
+            ownEventFilter,
+            minorEventFilter,
+            systemEventFilter,
+            readEventFilter
+        );
+
+        assertEquals(expectedNotificationParameters, this.parametersFactory.createNotificationParameters(Map.of(
+            ParametersKey.USE_USER_PREFERENCES, "false"
+        )));
+    }
+
+    @Test
+    void createNotificationParametersDontUseUserPreferencesWithSpace() throws Exception
+    {
+        when(this.wikiDescriptorManager.getCurrentWikiId()).thenReturn("mywiki");
+        NotificationParameters expectedNotificationParameters = new NotificationParameters();
+        expectedNotificationParameters.format = NotificationFormat.ALERT;
+        expectedNotificationParameters.preferences = List.of(
+            new InternalNotificationPreference(this.recordableEventDescriptors.get(0)),
+            new InternalNotificationPreference(this.recordableEventDescriptors.get(1))
+        );
+        expectedNotificationParameters.filters = Set.of(
+            ownEventFilter,
+            minorEventFilter,
+            systemEventFilter,
+            readEventFilter,
+            scopeFilter
+        );
+
+        DefaultNotificationFilterPreference filterPreference0 = getFilterPreference("SPACE", 0);
+        filterPreference0.setPage("mywiki@@s1");
+        expectedNotificationParameters.filterPreferences = List.of(
+            new ScopeNotificationFilterPreference(filterPreference0, this.entityReferenceResolver)
+        );
+
+        assertEquals(expectedNotificationParameters, this.parametersFactory.createNotificationParameters(Map.of(
+            ParametersKey.USE_USER_PREFERENCES, "false",
+            ParametersKey.SPACES, "s1"
+        )));
     }
 
     private DefaultNotificationFilterPreference getFilterPreference(String property, int number)
@@ -369,7 +422,6 @@ public class DefaultNotificationParametersFactoryTest
         filterPreference.setFilterName(ScopeNotificationFilter.FILTER_NAME);
         filterPreference.setFilterType(NotificationFilterType.INCLUSIVE);
         filterPreference.setNotificationFormats(Collections.singleton(NotificationFormat.ALERT));
-        filterPreference.setProviderHint("FACTORY");
         return filterPreference;
     }
 }
