@@ -19,11 +19,8 @@
  */
 package org.xwiki.platform.notifications.test.ui;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -32,27 +29,36 @@ import org.junit.jupiter.api.Test;
 import org.xwiki.index.tree.test.po.DocumentTreeElement;
 import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.SpaceReference;
+import org.xwiki.model.reference.WikiReference;
 import org.xwiki.platform.notifications.test.po.AbstractNotificationsSettingsPage;
+import org.xwiki.platform.notifications.test.po.NotificationWatchButtonElement;
 import org.xwiki.platform.notifications.test.po.NotificationsAdministrationPage;
-import org.xwiki.platform.notifications.test.po.NotificationsTrayPage;
 import org.xwiki.platform.notifications.test.po.NotificationsUserProfilePage;
+import org.xwiki.platform.notifications.test.po.NotificationsWatchModal;
 import org.xwiki.platform.notifications.test.po.preferences.ApplicationPreferences;
+import org.xwiki.platform.notifications.test.po.preferences.CustomNotificationFilterPreferencesLiveDataElement;
 import org.xwiki.platform.notifications.test.po.preferences.filters.CustomNotificationFilterModal;
 import org.xwiki.platform.notifications.test.po.preferences.filters.CustomNotificationFilterPreference;
 import org.xwiki.platform.notifications.test.po.preferences.filters.SystemNotificationFilterPreference;
 import org.xwiki.test.docker.junit5.TestReference;
 import org.xwiki.test.docker.junit5.UITest;
 import org.xwiki.test.ui.TestUtils;
-import org.xwiki.test.ui.po.BootstrapSwitch;
+import org.xwiki.test.ui.po.CopyOrRenameOrDeleteStatusPage;
+import org.xwiki.test.ui.po.RenamePage;
+import org.xwiki.test.ui.po.ViewPage;
 import org.xwiki.tree.test.po.TreeNodeElement;
 import org.xwiki.user.test.po.AbstractUserProfilePage;
+import org.xwiki.user.test.po.ProfileUserProfilePage;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.xwiki.test.ui.po.BootstrapSwitch.State.OFF;
+import static org.xwiki.test.ui.po.BootstrapSwitch.State.ON;
+import static org.xwiki.test.ui.po.BootstrapSwitch.State.UNDETERMINED;
 
 /**
- * Tests for the Notification settings UI
+ * Tests for the Notification settings UI.
  *
  * @version $Id$
  * @since 12.3RC1
@@ -62,324 +68,369 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
         "xwikiDbHbmCommonExtraMappings=notification-filter-preferences.hbm.xml",
     },
     extraJARs = {
-        // It's currently not possible to install a JAR contributing a Hibernate mapping file as an Extension. Thus
-        // we need to provide the JAR inside WEB-INF/lib. See https://jira.xwiki.org/browse/XWIKI-8271
+        // It's currently not possible to install a JAR contributing a Hibernate mapping file as an Extension. Thus,
+        // we need to provide the JAR inside WEB-INF/lib. See https://jira.xwiki.org/browse/XWIKI-19932
         "org.xwiki.platform:xwiki-platform-notifications-filters-default",
-        // It's currently not possible to install a JAR contributing a Hibernate mapping file as an Extension. Thus
-        // we need to provide the JAR inside WEB-INF/lib. See https://jira.xwiki.org/browse/XWIKI-8271
-        "org.xwiki.platform:xwiki-platform-eventstream-store-hibernate",
-        // The Solr store is not ready yet to be installed as extension
+        // The Solr store is not ready yet to be installed as an extension, so we need to add it to WEB-INF/lib
+        // manually. See https://jira.xwiki.org/browse/XWIKI-21594
         "org.xwiki.platform:xwiki-platform-eventstream-store-solr"
     }
 )
-public class NotificationsSettingsIT
+class NotificationsSettingsIT
 {
     private static final String FIRST_USER_NAME = NotificationsSettingsIT.class.getSimpleName() + "user1";
+
     private static final String FIRST_USER_PASSWORD = "notificationsUser1";
+
     private static final String EMAIL_FORMAT = "email";
+
     private static final String SYSTEM = "org.xwiki.platform";
+
     private static final String CREATE = "create";
 
     private static final String DELETE = "delete";
 
     private static final String UPDATE = "update";
+
     private static final String ADD_COMMENT = "addComment";
+
     private static final String ALERT_FORMAT = "alert";
 
     @BeforeEach
-    public void setup(TestUtils testUtils)
+    void setup(TestUtils testUtils)
     {
         testUtils.createUser(FIRST_USER_NAME, FIRST_USER_PASSWORD, "", "");
     }
 
     @AfterEach
-    public void tearDown(TestUtils testUtils)
+    void tearDown(TestUtils testUtils)
     {
         testUtils.deletePage("XWiki", FIRST_USER_NAME);
     }
 
     @Test
     @Order(1)
-    public void notificationsSwitches(TestUtils testUtils) throws Exception
+    void notificationsSwitches(TestUtils testUtils) throws Exception
     {
         testUtils.login(FIRST_USER_NAME, FIRST_USER_PASSWORD);
-        NotificationsUserProfilePage p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        NotificationsUserProfilePage notificationsUserProfilePage =
+            NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
 
-        assertEquals(1, p.getApplicationPreferences().size());
+        assertEquals(1, notificationsUserProfilePage.getApplicationPreferences().size());
 
         // Open system
-        ApplicationPreferences system = p.getApplication(SYSTEM);
+        ApplicationPreferences system = notificationsUserProfilePage.getApplication(SYSTEM);
         assertTrue(system.isCollapsed());
         system.setCollapsed(false);
         assertFalse(system.isCollapsed());
         assertEquals("Pages", system.getApplicationName());
-        assertEquals("A comment is posted", p.getEventType(SYSTEM, ADD_COMMENT).getEventTypeDescription());
-        assertEquals("A new page is created", p.getEventType(SYSTEM, CREATE).getEventTypeDescription());
-        assertEquals("A page is deleted", p.getEventType(SYSTEM, DELETE).getEventTypeDescription());
-        assertEquals("A page is modified", p.getEventType(SYSTEM, UPDATE).getEventTypeDescription());
+        assertEquals("A comment is posted",
+            notificationsUserProfilePage.getEventType(SYSTEM, ADD_COMMENT).getEventTypeDescription());
+        assertEquals("A new page is created",
+            notificationsUserProfilePage.getEventType(SYSTEM, CREATE).getEventTypeDescription());
+        assertEquals("A page is deleted",
+            notificationsUserProfilePage.getEventType(SYSTEM, DELETE).getEventTypeDescription());
+        assertEquals("A page is modified",
+            notificationsUserProfilePage.getEventType(SYSTEM, UPDATE).getEventTypeDescription());
 
         // Check default
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
-
-        // Enable alert on system
-        p.setApplicationState(SYSTEM, ALERT_FORMAT, BootstrapSwitch.State.ON);
-        assertEquals(BootstrapSwitch.State.ON , p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
-
-        // Enable email on system
-        p.setApplicationState(SYSTEM, EMAIL_FORMAT, BootstrapSwitch.State.ON);
-        assertEquals(BootstrapSwitch.State.ON, p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
         // Disable email on system
-        p.setApplicationState(SYSTEM, EMAIL_FORMAT, BootstrapSwitch.State.OFF);
-        assertEquals(BootstrapSwitch.State.ON , p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        notificationsUserProfilePage.setApplicationState(SYSTEM, EMAIL_FORMAT, OFF);
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
         // Disable alert on "update"
-        p.setEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT, BootstrapSwitch.State.OFF);
-        assertEquals(BootstrapSwitch.State.UNDETERMINED , p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        notificationsUserProfilePage.setEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT, OFF);
+        assertEquals(UNDETERMINED, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
         // Enable email on "delete"
-        p.setEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT, BootstrapSwitch.State.ON);
-        assertEquals(BootstrapSwitch.State.UNDETERMINED , p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.UNDETERMINED, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON , p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        notificationsUserProfilePage.setEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT, ON);
+        assertEquals(UNDETERMINED, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(UNDETERMINED, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
         // Forget it
-        p.disableAllParameters();
+        notificationsUserProfilePage.disableAllParameters();
     }
 
     @Test
     @Order(2)
-    public void notificationFiltersDefaultValues(TestUtils testUtils) throws Exception
+    void notificationFiltersDefaultValues(TestUtils testUtils)
     {
         testUtils.login(FIRST_USER_NAME, FIRST_USER_PASSWORD);
 
         // Verify the default state of the filters
-        NotificationsUserProfilePage p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-        List<SystemNotificationFilterPreference> preferences = p.getSystemNotificationFilterPreferences();
+        NotificationsUserProfilePage notificationsUserProfilePage =
+            NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        List<SystemNotificationFilterPreference> preferences =
+            notificationsUserProfilePage.getSystemNotificationFilterPreferences();
         assertEquals(6, preferences.size());
 
         // Filter 0
-        assertEquals("Minor Event (Alert)", preferences.get(0).getFilterName());
-        assertEquals("Hide notifications concerning minor changes on pages", preferences.get(0).getDescription());
-        assertEquals(Arrays.asList("Alert"), preferences.get(0).getFormats());
-        assertTrue(preferences.get(0).isEnabled());
+        SystemNotificationFilterPreference filter0 = preferences.get(0);
+        assertEquals("Read Event Filter (Alert)", filter0.getName());
+        assertEquals("Hide notifications that you have marked as read", filter0.getDescription());
+        assertEquals(List.of("Alert"), filter0.getFormats());
+        assertFalse(filter0.isEnabled());
 
         // Filter 1
-        assertEquals("Minor Event (Email)", preferences.get(1).getFilterName());
-        assertEquals("Hide notifications concerning minor changes on pages", preferences.get(1).getDescription());
-        assertEquals(Arrays.asList("Email"), preferences.get(1).getFormats());
-        assertTrue(preferences.get(1).isEnabled());
+        SystemNotificationFilterPreference filter1 = preferences.get(1);
+        assertEquals("Read Event Filter (Email)", filter1.getName());
+        assertEquals("Hide notifications that you have marked as read", filter1.getDescription());
+        assertEquals(List.of("Email"), filter1.getFormats());
+        assertFalse(filter1.isEnabled());
 
         // Filter 2
-        assertEquals("Own Events Filter", preferences.get(2).getFilterName());
-        assertEquals("Hide notifications about your own activity", preferences.get(2).getDescription());
-        assertEquals(Arrays.asList("Alert", "Email"), preferences.get(2).getFormats());
-        assertTrue(preferences.get(2).isEnabled());
+        SystemNotificationFilterPreference filter2 = preferences.get(2);
+        assertEquals("Minor Event (Alert)", filter2.getName());
+        assertEquals("Hide notifications concerning minor changes on pages", filter2.getDescription());
+        assertEquals(List.of("Alert"), filter2.getFormats());
+        assertTrue(filter2.isEnabled());
 
         // Filter 3
-        assertEquals("Read Event Filter (Alert)", preferences.get(3).getFilterName());
-        assertEquals("Hide notifications that you have marked as read", preferences.get(3).getDescription());
-        assertEquals(Arrays.asList("Alert"), preferences.get(3).getFormats());
-        assertFalse(preferences.get(3).isEnabled());
+        SystemNotificationFilterPreference filter3 = preferences.get(3);
+        assertEquals("Minor Event (Email)", filter3.getName());
+        assertEquals("Hide notifications concerning minor changes on pages", filter3.getDescription());
+        assertEquals(List.of("Email"), filter3.getFormats());
+        assertTrue(filter3.isEnabled());
 
         // Filter 4
-        assertEquals("Read Event Filter (Email)", preferences.get(4).getFilterName());
-        assertEquals("Hide notifications that you have marked as read", preferences.get(4).getDescription());
-        assertEquals(Arrays.asList("Email"), preferences.get(4).getFormats());
-        assertFalse(preferences.get(4).isEnabled());
+        SystemNotificationFilterPreference filter4 = preferences.get(4);
+        assertEquals("Own Events Filter", filter4.getName());
+        assertEquals("Hide notifications about your own activity unless the event specifically targets you",
+            filter4.getDescription());
+        assertEquals(List.of("Alert", "Email"), filter4.getFormats());
+        assertTrue(filter4.isEnabled());
 
         // Filter 5
-        assertEquals("System Filter", preferences.get(5).getFilterName());
-        assertEquals("Hide notifications from the System user", preferences.get(5).getDescription());
-        assertEquals(Arrays.asList("Alert", "Email"), preferences.get(5).getFormats());
-        assertTrue(preferences.get(5).isEnabled());
+        SystemNotificationFilterPreference filter5 = preferences.get(5);
+        assertEquals("System Filter", filter5.getName());
+        assertEquals("Hide notifications from the System user unless the event specifically targets you",
+            filter5.getDescription());
+        assertEquals(List.of("Alert", "Email"), filter5.getFormats());
+        assertTrue(filter5.isEnabled());
     }
 
     @Test
     @Order(3)
-    public void filterAndWatchedPage(TestUtils testUtils, TestReference testReference) throws Exception
+    void filterAndWatchedPage(TestUtils testUtils, TestReference testReference) throws Exception
     {
         testUtils.login(FIRST_USER_NAME, FIRST_USER_PASSWORD);
+        DocumentReference childPage =
+            new DocumentReference("WebHome", new SpaceReference("Subspace", testReference.getLastSpaceReference()));
+        NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
 
-        try {
-            NotificationsUserProfilePage p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        // Create a page
+        testUtils.createPage(testReference, "", "");
+        NotificationWatchButtonElement watchButtonElement = new NotificationWatchButtonElement();
 
-            // Enable the notifications
-            p.setApplicationState(SYSTEM, "alert", BootstrapSwitch.State.ON);
+        // Check if the page is watched
+        assertTrue(watchButtonElement.isWatched());
 
-            // Create a page
-            testUtils.createPage(testReference.getLastSpaceReference().getName(), testReference.getName(), "", "");
-            NotificationsTrayPage trayPage = new NotificationsTrayPage();
-            trayPage.showNotificationTray();
+        // Go back to the preferences to ensure the filter has been created
+        NotificationsUserProfilePage notificationsUserProfilePage =
+            NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        CustomNotificationFilterPreferencesLiveDataElement customPrefLiveData =
+            notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        List<CustomNotificationFilterPreference> preferences =
+            customPrefLiveData.getCustomNotificationFilterPreferences();
+        assertEquals(1, preferences.size());
 
-            // Check if the page is watched
-            assertTrue(trayPage.isPageOnlyWatched());
-            assertTrue(trayPage.arePageAndChildrenWatched());
-            assertTrue(trayPage.isWikiWatched());
+        String pageName =
+            testUtils.serializeReference(testReference.removeParent(new WikiReference("xwiki")));
 
-            // Unwatch the wiki
-            trayPage.setWikiWatchedState(false);
-            // Verify all other buttons are updated
-            assertFalse(trayPage.isPageOnlyWatched());
-            assertFalse(trayPage.arePageAndChildrenWatched());
+        // Filter 0
+        assertEquals("Page only", preferences.get(0).getScope());
+        assertEquals(pageName, preferences.get(0).getLocation());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT,
+            preferences.get(0).getFilterAction());
+        assertTrue(preferences.get(0).getEventTypes().isEmpty());
+        assertTrue(preferences.get(0).getFormats().containsAll(List.of("Email", "Alert")));
+        assertTrue(preferences.get(0).isEnabled());
 
-            // Go back to the preferences to ensure the filter has been created
-            p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-            List<CustomNotificationFilterPreference> preferences = p.getCustomNotificationFilterPreferences();
-            assertEquals(1, preferences.size());
+        // back to the page
+        testUtils.gotoPage(testReference);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isWatched());
+        NotificationsWatchModal notificationsWatchModal = watchButtonElement.openModal();
+        assertEquals(List.of(
+            NotificationsWatchModal.WatchOptions.UNWATCH_PAGE,
+            NotificationsWatchModal.WatchOptions.UNWATCH_PAGE_WATCH_SPACE
+        ), notificationsWatchModal.getAvailableOptions());
+        notificationsWatchModal.selectOptionAndSave(NotificationsWatchModal.WatchOptions.UNWATCH_PAGE_WATCH_SPACE);
 
-            // Filter 0
-            assertTrue(preferences.get(0).getFilterName().contains("Wiki"));
-            assertEquals("", preferences.get(0).getLocation());
-            assertEquals(CustomNotificationFilterPreference.FilterAction.IGNORE_EVENT,
-                preferences.get(0).getFilterAction());
-            assertTrue(preferences.get(0).getEventTypes().isEmpty());;
-            assertTrue(preferences.get(0).getFormats().containsAll(Arrays.asList("Email", "Alert")));
-            assertTrue(preferences.get(0).isEnabled());
+        // Go back to the preferences to ensure the filter has been created
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        customPrefLiveData =
+            notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        preferences = customPrefLiveData.getCustomNotificationFilterPreferences();
+        assertEquals(1, preferences.size());
 
-            // back to the page
-            testUtils.gotoPage(testReference.getLastSpaceReference().getName(), testReference.getName());
-            trayPage = new NotificationsTrayPage();
-            trayPage.showNotificationTray();
+        // Filter 1
+        assertEquals("Page and children", preferences.get(0).getScope());
+        assertEquals(pageName, preferences.get(0).getLocation());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT,
+            preferences.get(0).getFilterAction());
+        assertTrue(preferences.get(0).getEventTypes().isEmpty());
+        assertTrue(preferences.get(0).getFormats().containsAll(List.of("Email", "Alert")));
+        assertTrue(preferences.get(0).isEnabled());
 
-            // Watch the space
-            trayPage.setPageAndChildrenWatchedState(true);
-            // Verify the other button is updated
-            assertTrue(trayPage.isPageOnlyWatched());
+        // back to the page
+        testUtils.gotoPage(testReference);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isWatched());
 
-            // Go back to the preferences to ensure the filter has been created
-            p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-            preferences = p.getCustomNotificationFilterPreferences();
-            assertEquals(2, preferences.size());
+        notificationsWatchModal = watchButtonElement.openModal();
+        assertEquals(List.of(
+            NotificationsWatchModal.WatchOptions.UNWATCH_SPACE
+        ), notificationsWatchModal.getAvailableOptions());
 
-            // Filter 1
-            assertTrue(preferences.get(1).getFilterName().contains("Page and children"));
-            assertEquals(testReference.getLastSpaceReference().getName() + ".WebHome",
-                preferences.get(1).getLocation());
-            assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT,
-                preferences.get(1).getFilterAction());
-            assertTrue(preferences.get(1).getEventTypes().isEmpty());
-            assertTrue(preferences.get(1).getFormats().containsAll(Arrays.asList("Email", "Alert")));
-            assertTrue(preferences.get(1).isEnabled());
+        // Unwatch the space
+        notificationsWatchModal.selectOptionAndSave(NotificationsWatchModal.WatchOptions.UNWATCH_SPACE);
 
-            // back to the page
-            testUtils.gotoPage(testReference.getLastSpaceReference().getName(), testReference.getName());
-            trayPage = new NotificationsTrayPage();
-            trayPage.showNotificationTray();
+        // Go back to the preferences to ensure the filter has been deleted
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        customPrefLiveData =
+            notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        preferences = customPrefLiveData.getCustomNotificationFilterPreferences();
+        assertTrue(preferences.isEmpty());
 
-            // Unwatch the page
-            trayPage.setPageOnlyWatchedState(false);
-            // Verify the whole status
-            assertFalse(trayPage.isPageOnlyWatched());
-            assertTrue(trayPage.arePageAndChildrenWatched());
-            assertFalse(trayPage.isWikiWatched());
+        // back to the page
+        testUtils.gotoPage(testReference);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isNotSet());
+        notificationsWatchModal = watchButtonElement.openModal();
+        assertEquals(List.of(
+            NotificationsWatchModal.WatchOptions.WATCH_PAGE,
+            NotificationsWatchModal.WatchOptions.WATCH_SPACE,
+            NotificationsWatchModal.WatchOptions.WATCH_WIKI
+        ), notificationsWatchModal.getAvailableOptions());
 
-            // Go back to the preferences
-            p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-            preferences = p.getCustomNotificationFilterPreferences();
-            assertEquals(3, preferences.size());
+        // Watch again the space and block a children page
+        notificationsWatchModal.selectOptionAndSave(NotificationsWatchModal.WatchOptions.WATCH_SPACE);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isWatched());
+        String childPageName =
+            testUtils.serializeReference(childPage.removeParent(new WikiReference("xwiki")));
+        testUtils.createPage(childPage, "", "");
+        watchButtonElement = new NotificationWatchButtonElement();
+        // the children page is also watched
+        assertTrue(watchButtonElement.isWatched());
 
-            // Filter 2
-            assertTrue(preferences.get(2).getFilterName().contains("Page only"));
-            assertEquals(testReference.getLastSpaceReference().getName() + "." + testReference.getName(),
-                preferences.get(2).getLocation());
-            assertEquals(CustomNotificationFilterPreference.FilterAction.IGNORE_EVENT,
-                preferences.get(2).getFilterAction());
-            assertTrue(preferences.get(2).getEventTypes().isEmpty());
-            assertTrue(preferences.get(2).getFormats().containsAll(Arrays.asList("Email", "Alert")));
-            assertTrue(preferences.get(2).isEnabled());
+        notificationsWatchModal = watchButtonElement.openModal();
+        assertEquals(List.of(
+            NotificationsWatchModal.WatchOptions.BLOCK_PAGE,
+            NotificationsWatchModal.WatchOptions.BLOCK_SPACE
+        ), notificationsWatchModal.getAvailableOptions());
 
-            // Disable filter 6
-            preferences.get(0).setEnabled(false);
-            // Refresh the page
-            p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-            preferences = p.getCustomNotificationFilterPreferences();
-            // Verify the change have been saved
-            assertFalse(preferences.get(0).isEnabled());
+        notificationsWatchModal.selectOptionAndSave(NotificationsWatchModal.WatchOptions.BLOCK_PAGE);
 
-            // Delete these new filters
-            preferences.get(2).delete();
-            // The livetable page is refreshed so we need to load back the filter preferences
-            p.getCustomNotificationFilterPreferences().get(1).delete();
-            p.getCustomNotificationFilterPreferences().get(0).delete();
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isBlocked());
 
-            // Verify it's all like the beginning
-            testUtils.gotoPage(testReference.getLastSpaceReference().getName(), testReference.getName());
-            trayPage = new NotificationsTrayPage();
-            trayPage.showNotificationTray();
-            assertTrue(trayPage.isPageOnlyWatched());
-            assertTrue(trayPage.arePageAndChildrenWatched());
-            assertTrue(trayPage.isWikiWatched());
+        // Go back to the preferences
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        customPrefLiveData =
+            notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        preferences = customPrefLiveData.getCustomNotificationFilterPreferences();
+        assertEquals(2, preferences.size());
 
-            // Go back to the preferences
-            p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-            preferences = p.getCustomNotificationFilterPreferences();
-            assertTrue(preferences.isEmpty());
+        // Filter 2
+        assertEquals("Page only", preferences.get(0).getScope());
+        assertEquals(childPageName, preferences.get(0).getLocation());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.IGNORE_EVENT,
+            preferences.get(0).getFilterAction());
+        assertTrue(preferences.get(0).getEventTypes().isEmpty());
+        assertTrue(preferences.get(0).getFormats().containsAll(List.of("Email", "Alert")));
+        assertTrue(preferences.get(0).isEnabled());
 
-        } finally {
-            // Clean up
-            testUtils.rest().deletePage(testReference.getLastSpaceReference().getName(), testReference.getName());
+        // Filter 1
+        assertEquals("Page and children", preferences.get(1).getScope());
+        assertEquals(pageName, preferences.get(1).getLocation());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT,
+            preferences.get(1).getFilterAction());
+        assertTrue(preferences.get(1).getEventTypes().isEmpty());
+        assertTrue(preferences.get(1).getFormats().containsAll(List.of("Email", "Alert")));
+        assertTrue(preferences.get(1).isEnabled());
 
-            NotificationsUserProfilePage p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-            List<CustomNotificationFilterPreference> preferences = p.getCustomNotificationFilterPreferences();
-            while (!preferences.isEmpty()) {
-                preferences.get(preferences.size() - 1).delete();
-                // Reload teh livetable
-                preferences = p.getCustomNotificationFilterPreferences();
-            }
-        }
+        // Disable filter 2
+        preferences.get(0).setEnabled(false);
+        // Refresh the page
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        customPrefLiveData =
+            notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        preferences = customPrefLiveData.getCustomNotificationFilterPreferences();
+        // Verify the change have been saved
+        assertFalse(preferences.get(0).isEnabled());
+
+        // Go back to the page to check how it impacts the watch
+        testUtils.gotoPage(childPage);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isWatched());
+
+        testUtils.gotoPage(testReference);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isWatched());
+
+        // Delete the filters
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        customPrefLiveData =
+            notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        preferences = customPrefLiveData.getCustomNotificationFilterPreferences();
+        // The livetable page is refreshed so we need to load back the filter preferences
+        preferences.get(1).delete();
+        preferences.get(0).delete();
+
+        // Verify it's all like the beginning
+        testUtils.gotoPage(testReference);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isNotSet());
+
+        testUtils.gotoPage(childPage);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isNotSet());
+
+        // Go back to the preferences
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        customPrefLiveData =
+            notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        preferences = customPrefLiveData.getCustomNotificationFilterPreferences();
+        assertTrue(preferences.isEmpty());
     }
 
     /**
@@ -391,56 +442,60 @@ public class NotificationsSettingsIT
     {
         // First step: login with first user, and set some notification settings.
         testUtils.login(FIRST_USER_NAME, FIRST_USER_PASSWORD);
-        AbstractNotificationsSettingsPage p =
+        AbstractNotificationsSettingsPage notificationsUserProfilePage =
             NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-        ApplicationPreferences system = p.getApplication(SYSTEM);
+        ApplicationPreferences system = notificationsUserProfilePage.getApplication(SYSTEM);
         assertTrue(system.isCollapsed());
         system.setCollapsed(false);
 
         // Check default values
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
-        assertEquals(NotificationsUserProfilePage.EmailDiffType.STANDARD, p.getNotificationEmailDiffType());
-        assertEquals(NotificationsUserProfilePage.AutowatchMode.MAJOR, p.getAutoWatchModeValue());
+        assertEquals(NotificationsUserProfilePage.EmailDiffType.STANDARD,
+            notificationsUserProfilePage.getNotificationEmailDiffType());
+        assertEquals(NotificationsUserProfilePage.AutowatchMode.MAJOR,
+            notificationsUserProfilePage.getAutoWatchModeValue());
 
-        p.setEventTypeState(SYSTEM, CREATE, ALERT_FORMAT, BootstrapSwitch.State.ON);
-        p.setAutoWatchMode(NotificationsUserProfilePage.AutowatchMode.NONE);
+        notificationsUserProfilePage.setEventTypeState(SYSTEM, CREATE, ALERT_FORMAT, OFF);
+        notificationsUserProfilePage.setAutoWatchMode(NotificationsUserProfilePage.AutowatchMode.NONE);
 
         // Second step: login with superadmin and set global notification settings.
         testUtils.loginAsSuperAdmin();
-        p = NotificationsAdministrationPage.gotoPage();
+        notificationsUserProfilePage = NotificationsAdministrationPage.gotoPage();
 
-        system = p.getApplication(SYSTEM);
+        system = notificationsUserProfilePage.getApplication(SYSTEM);
         assertTrue(system.isCollapsed());
         system.setCollapsed(false);
-        
+
         // Check default values
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
-        assertEquals(NotificationsUserProfilePage.EmailDiffType.STANDARD, p.getNotificationEmailDiffType());
-        assertEquals(NotificationsUserProfilePage.AutowatchMode.MAJOR, p.getAutoWatchModeValue());
+        assertEquals(NotificationsUserProfilePage.EmailDiffType.STANDARD,
+            notificationsUserProfilePage.getNotificationEmailDiffType());
+        assertEquals(NotificationsUserProfilePage.AutowatchMode.MAJOR,
+            notificationsUserProfilePage.getAutoWatchModeValue());
 
-        p.setEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT, BootstrapSwitch.State.ON);
-        p.setAutoWatchMode(NotificationsUserProfilePage.AutowatchMode.ALL);
-        p.setNotificationEmailDiffType(NotificationsUserProfilePage.EmailDiffType.NOTHING);
+        notificationsUserProfilePage.setEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT, OFF);
+        notificationsUserProfilePage.setAutoWatchMode(NotificationsUserProfilePage.AutowatchMode.ALL);
+        notificationsUserProfilePage.setNotificationEmailDiffType(NotificationsUserProfilePage.EmailDiffType.NOTHING);
 
         // Third step: create an user, and check his settings with superadmin and perform some changes on it.
         String secondUser = testReference.getName() + "Foo";
@@ -451,82 +506,88 @@ public class NotificationsSettingsIT
         AbstractUserProfilePage profilePage = new AbstractUserProfilePage(secondUser);
         assertTrue(profilePage.getAvailableCategories().contains("Notifications"));
 
-        p = NotificationsUserProfilePage.gotoPage(secondUser);
-        system = p.getApplication(SYSTEM);
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(secondUser);
+        system = notificationsUserProfilePage.getApplication(SYSTEM);
         assertTrue(system.isCollapsed());
         system.setCollapsed(false);
 
-        // All should be false except update alert
-        assertEquals(BootstrapSwitch.State.UNDETERMINED, p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        // All should be true except update alert
+        assertEquals(UNDETERMINED, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
-        assertEquals(NotificationsUserProfilePage.EmailDiffType.NOTHING, p.getNotificationEmailDiffType());
-        assertEquals(NotificationsUserProfilePage.AutowatchMode.ALL, p.getAutoWatchModeValue());
+        assertEquals(NotificationsUserProfilePage.EmailDiffType.NOTHING,
+            notificationsUserProfilePage.getNotificationEmailDiffType());
+        assertEquals(NotificationsUserProfilePage.AutowatchMode.ALL,
+            notificationsUserProfilePage.getAutoWatchModeValue());
 
         // perform some changes with superadmin
-        p.setEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT, BootstrapSwitch.State.ON);
-        p.setAutoWatchMode(NotificationsUserProfilePage.AutowatchMode.NEW);
+        notificationsUserProfilePage.setEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT, OFF);
+        notificationsUserProfilePage.setAutoWatchMode(NotificationsUserProfilePage.AutowatchMode.NEW);
 
         // Fourth step: still with superadmin, go to first user notification settings, check them and perform changes.
         testUtils.gotoPage("XWiki", FIRST_USER_NAME);
         profilePage = new AbstractUserProfilePage(FIRST_USER_NAME);
         assertTrue(profilePage.getAvailableCategories().contains("Notifications"));
 
-        p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
-        system = p.getApplication(SYSTEM);
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        system = notificationsUserProfilePage.getApplication(SYSTEM);
         assertTrue(system.isCollapsed());
         system.setCollapsed(false);
 
-        // All should be false except for the create alert, specified in first step.
-        assertEquals(BootstrapSwitch.State.UNDETERMINED, p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        // All should be true except for the create alert, specified in first step.
+        assertEquals(UNDETERMINED, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
         // We didn't change the email settings value in first step, so we obtain here the global settings until
         // the user decide which settings she'd want for herself.
-        assertEquals(NotificationsUserProfilePage.EmailDiffType.NOTHING, p.getNotificationEmailDiffType());
-        assertEquals(NotificationsUserProfilePage.AutowatchMode.NONE, p.getAutoWatchModeValue());
+        assertEquals(NotificationsUserProfilePage.EmailDiffType.NOTHING,
+            notificationsUserProfilePage.getNotificationEmailDiffType());
+        assertEquals(NotificationsUserProfilePage.AutowatchMode.NONE,
+            notificationsUserProfilePage.getAutoWatchModeValue());
 
         // perform some changes with superadmin
-        p.setEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT, BootstrapSwitch.State.ON);
-        p.setNotificationEmailDiffType(NotificationsUserProfilePage.EmailDiffType.STANDARD);
+        notificationsUserProfilePage.setEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT, OFF);
+        notificationsUserProfilePage.setNotificationEmailDiffType(NotificationsUserProfilePage.EmailDiffType.STANDARD);
 
         // Fifth step: login with first user and check notification settings
         testUtils.login(FIRST_USER_NAME, FIRST_USER_PASSWORD);
-        p = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
+        notificationsUserProfilePage = NotificationsUserProfilePage.gotoPage(FIRST_USER_NAME);
 
-        system = p.getApplication(SYSTEM);
+        system = notificationsUserProfilePage.getApplication(SYSTEM);
         assertTrue(system.isCollapsed());
         system.setCollapsed(false);
 
-        assertEquals(BootstrapSwitch.State.UNDETERMINED, p.getApplicationState(SYSTEM, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.UNDETERMINED, p.getApplicationState(SYSTEM, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.ON, p.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
-        assertEquals(BootstrapSwitch.State.OFF, p.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
+        assertEquals(UNDETERMINED, notificationsUserProfilePage.getApplicationState(SYSTEM, ALERT_FORMAT));
+        assertEquals(UNDETERMINED, notificationsUserProfilePage.getApplicationState(SYSTEM, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, ALERT_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, ADD_COMMENT, EMAIL_FORMAT));
+        assertEquals(OFF, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, CREATE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, DELETE, EMAIL_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, ALERT_FORMAT));
+        assertEquals(ON, notificationsUserProfilePage.getEventTypeState(SYSTEM, UPDATE, EMAIL_FORMAT));
 
-        assertEquals(NotificationsUserProfilePage.EmailDiffType.STANDARD, p.getNotificationEmailDiffType());
-        assertEquals(NotificationsUserProfilePage.AutowatchMode.NONE, p.getAutoWatchModeValue());
+        assertEquals(NotificationsUserProfilePage.EmailDiffType.STANDARD,
+            notificationsUserProfilePage.getNotificationEmailDiffType());
+        assertEquals(NotificationsUserProfilePage.AutowatchMode.NONE,
+            notificationsUserProfilePage.getAutoWatchModeValue());
 
         // sixth step: check if first user can access notification settings of the other user.
         testUtils.gotoPage("XWiki", secondUser);
@@ -540,10 +601,11 @@ public class NotificationsSettingsIT
      *   - create a new user and check that the filter exist for it
      *   - add a new filter to the user with admin user
      *   - login with the new user and add another new filter
+     *   - Add several new preferences and check the modal sort/filter operations
      */
     @Test
     @Order(5)
-    void addCustomFilters(TestUtils testUtils)
+    void customFiltersAndLiveData(TestUtils testUtils) throws Exception
     {
         // Create pages for the filter locations
         SpaceReference lastSpaceReference = new SpaceReference("xwiki", NotificationsSettingsIT.class.getSimpleName());
@@ -557,17 +619,18 @@ public class NotificationsSettingsIT
 
         testUtils.loginAsSuperAdmin();
         NotificationsAdministrationPage administrationPage = NotificationsAdministrationPage.gotoPage();
+        CustomNotificationFilterPreferencesLiveDataElement customPrefLiveData =
+            administrationPage.getCustomNotificationFilterPreferencesLiveData();
         List<CustomNotificationFilterPreference> customNotificationFilterPreferences =
-            administrationPage.getCustomNotificationFilterPreferences();
+            customPrefLiveData.getCustomNotificationFilterPreferences();
         assertTrue(customNotificationFilterPreferences.isEmpty());
 
         CustomNotificationFilterModal customNotificationFilterModal = administrationPage.clickAddCustomFilter();
 
         // check default values of the modal
         assertFalse(customNotificationFilterModal.isSubmitEnabled());
-        assertEquals(new HashSet<>(Arrays.asList(
-            CustomNotificationFilterModal.NotificationFormat.ALERT,
-            CustomNotificationFilterModal.NotificationFormat.EMAIL)),
+        assertEquals(Set.of(CustomNotificationFilterModal.NotificationFormat.ALERT,
+                CustomNotificationFilterModal.NotificationFormat.EMAIL),
             customNotificationFilterModal.getSelectedFormats());
         assertTrue(customNotificationFilterModal.getEventsSelector().getAllSelectedOptions().isEmpty());
         DocumentTreeElement locations = customNotificationFilterModal.getLocations();
@@ -578,23 +641,22 @@ public class NotificationsSettingsIT
         locations = locations.openToDocument(NotificationsSettingsIT.class.getSimpleName(), "WebHome");
         locations.getDocumentNode(NotificationsSettingsIT.class.getSimpleName(), "WebHome").select();
         customNotificationFilterModal.getEventsSelector().selectByValue(UPDATE);
-        customNotificationFilterModal.selectFormats(Collections.singleton(
-            CustomNotificationFilterModal.NotificationFormat.EMAIL));
+        customNotificationFilterModal.selectFormats(Set.of(CustomNotificationFilterModal.NotificationFormat.EMAIL));
         assertTrue(customNotificationFilterModal.isSubmitEnabled());
         customNotificationFilterModal.clickSubmit();
 
         // check newly created filter
         customNotificationFilterPreferences =
-            administrationPage.getCustomNotificationFilterPreferences();
+            customPrefLiveData.getCustomNotificationFilterPreferences();
         assertEquals(1, customNotificationFilterPreferences.size());
         CustomNotificationFilterPreference filterPreference =
             customNotificationFilterPreferences.get(0);
 
-        assertTrue(filterPreference.getFilterName().contains("Page and children"));
+        assertEquals("Page and children", filterPreference.getScope());
         assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".WebHome", filterPreference.getLocation());
         assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
-        assertEquals(Collections.singletonList("Email"), filterPreference.getFormats());
-        assertEquals(Collections.singletonList("A page is modified"), filterPreference.getEventTypes());
+        assertEquals(List.of("Email"), filterPreference.getFormats());
+        assertEquals(List.of("A page is modified"), filterPreference.getEventTypes());
 
         // create new user
         String secondUserUsername = NotificationsSettingsIT.class.getSimpleName() + "user2";
@@ -606,18 +668,17 @@ public class NotificationsSettingsIT
         // go to notification settings of new user and check that the custom filter exists there too
         NotificationsUserProfilePage notificationsUserProfilePage =
             NotificationsUserProfilePage.gotoPage(secondUserUsername);
-        customNotificationFilterPreferences =
-            notificationsUserProfilePage.getCustomNotificationFilterPreferences();
+        customPrefLiveData = notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+        customNotificationFilterPreferences = customPrefLiveData.getCustomNotificationFilterPreferences();
 
         assertEquals(1, customNotificationFilterPreferences.size());
-        filterPreference =
-            customNotificationFilterPreferences.get(0);
+        filterPreference = customNotificationFilterPreferences.get(0);
 
-        assertTrue(filterPreference.getFilterName().contains("Page and children"));
+        assertEquals("Page and children", filterPreference.getScope());
         assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".WebHome", filterPreference.getLocation());
         assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
-        assertEquals(Collections.singletonList("Email"), filterPreference.getFormats());
-        assertEquals(Collections.singletonList("A page is modified"), filterPreference.getEventTypes());
+        assertEquals(List.of("Email"), filterPreference.getFormats());
+        assertEquals(List.of("A page is modified"), filterPreference.getEventTypes());
 
         // create a new custom filter for this user
         customNotificationFilterModal = notificationsUserProfilePage.clickAddCustomFilter();
@@ -631,19 +692,17 @@ public class NotificationsSettingsIT
         customNotificationFilterModal.clickSubmit();
 
         // Check the newly created filter
-        customNotificationFilterPreferences =
-            notificationsUserProfilePage.getCustomNotificationFilterPreferences();
+        customNotificationFilterPreferences = customPrefLiveData.getCustomNotificationFilterPreferences();
         assertEquals(2, customNotificationFilterPreferences.size());
 
-        filterPreference =
-            customNotificationFilterPreferences.get(1);
+        // Filters are ordered in descending order of creation
+        filterPreference = customNotificationFilterPreferences.get(0);
 
-        assertTrue(filterPreference.getFilterName().contains("Page"));
-        assertFalse(filterPreference.getFilterName().contains("Page and children"));
+        assertEquals("Page only", filterPreference.getScope());
         assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".SubSpace.SubPage",
             filterPreference.getLocation());
         assertEquals(CustomNotificationFilterPreference.FilterAction.IGNORE_EVENT, filterPreference.getFilterAction());
-        assertEquals(Arrays.asList("Alert", "Email"), filterPreference.getFormats());
+        assertEquals(List.of("Alert", "Email"), filterPreference.getFormats());
         assertTrue(filterPreference.getEventTypes().isEmpty());
 
         // login with the user
@@ -652,68 +711,164 @@ public class NotificationsSettingsIT
         // check the filters
         notificationsUserProfilePage =
             NotificationsUserProfilePage.gotoPage(secondUserUsername);
+        customPrefLiveData = notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
         customNotificationFilterPreferences =
-            notificationsUserProfilePage.getCustomNotificationFilterPreferences();
+            customPrefLiveData.getCustomNotificationFilterPreferences();
         assertEquals(2, customNotificationFilterPreferences.size());
 
         filterPreference =
             customNotificationFilterPreferences.get(0);
 
-        assertTrue(filterPreference.getFilterName().contains("Page and children"));
-        assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".WebHome", filterPreference.getLocation());
-        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
-        assertEquals(Collections.singletonList("Email"), filterPreference.getFormats());
-        assertEquals(Collections.singletonList("A page is modified"), filterPreference.getEventTypes());
-
-        filterPreference =
-            customNotificationFilterPreferences.get(1);
-
-        assertTrue(filterPreference.getFilterName().contains("Page"));
-        assertFalse(filterPreference.getFilterName().contains("Page and children"));
+        assertEquals("Page only", filterPreference.getScope());
         assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".SubSpace.SubPage",
             filterPreference.getLocation());
         assertEquals(CustomNotificationFilterPreference.FilterAction.IGNORE_EVENT, filterPreference.getFilterAction());
-        assertEquals(Arrays.asList("Alert", "Email"), filterPreference.getFormats());
+        assertEquals(List.of("Alert", "Email"), filterPreference.getFormats());
         assertTrue(filterPreference.getEventTypes().isEmpty());
+
+        filterPreference = customNotificationFilterPreferences.get(1);
+
+        assertEquals("Page and children", filterPreference.getScope());
+        assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".WebHome", filterPreference.getLocation());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
+        assertEquals(List.of("Email"), filterPreference.getFormats());
+        assertEquals(List.of("A page is modified"), filterPreference.getEventTypes());
 
         // add a final filter: it will actually create 2 filters since we select several locations
         customNotificationFilterModal = notificationsUserProfilePage.clickAddCustomFilter();
         customNotificationFilterModal.selectAction(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT);
         locations = customNotificationFilterModal.getLocations();
-        locations = locations.openToDocument(NotificationsSettingsIT.class.getSimpleName(),  "WebHome");
+        locations = locations.openToDocument(NotificationsSettingsIT.class.getSimpleName(), "WebHome");
         TreeNodeElement node1 = locations.getDocumentNode(NotificationsSettingsIT.class.getSimpleName(), "Page1");
         TreeNodeElement node2 = locations.getDocumentNode(NotificationsSettingsIT.class.getSimpleName(), "Page2");
         locations.selectNodes(node1, node2);
 
-        customNotificationFilterModal.selectFormats(
-            Collections.singleton(CustomNotificationFilterModal.NotificationFormat.ALERT));
+        customNotificationFilterModal.selectFormats(Set.of(CustomNotificationFilterModal.NotificationFormat.ALERT));
         customNotificationFilterModal.getEventsSelector().selectByValue(UPDATE);
         customNotificationFilterModal.getEventsSelector().selectByValue(DELETE);
-        customNotificationFilterModal.clickSubmit();
+        customNotificationFilterModal.clickSubmit(2);
 
         // check created filters
-        customNotificationFilterPreferences =
-            notificationsUserProfilePage.getCustomNotificationFilterPreferences();
+        customNotificationFilterPreferences = customPrefLiveData.getCustomNotificationFilterPreferences();
         assertEquals(4, customNotificationFilterPreferences.size());
 
-        filterPreference =
-            customNotificationFilterPreferences.get(2);
+        filterPreference = customNotificationFilterPreferences.get(0);
 
-        assertTrue(filterPreference.getFilterName().contains("Page"));
-        assertFalse(filterPreference.getFilterName().contains("Page and children"));
-        assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".Page1", filterPreference.getLocation());
-        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
-        assertEquals(Collections.singletonList("Alert"), filterPreference.getFormats());
-        assertEquals(Arrays.asList("A page is modified", "A page is deleted"), filterPreference.getEventTypes());
-
-        filterPreference =
-            customNotificationFilterPreferences.get(3);
-
-        assertTrue(filterPreference.getFilterName().contains("Page"));
-        assertFalse(filterPreference.getFilterName().contains("Page and children"));
+        assertEquals("Page only", filterPreference.getScope());
         assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".Page2", filterPreference.getLocation());
         assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
-        assertEquals(Collections.singletonList("Alert"), filterPreference.getFormats());
-        assertEquals(Arrays.asList("A page is modified", "A page is deleted"), filterPreference.getEventTypes());
+        assertEquals(List.of("Alert"), filterPreference.getFormats());
+        // core.events.delete before core.events.update
+        assertEquals(List.of("A page is deleted","A page is modified"), filterPreference.getEventTypes());
+
+        filterPreference = customNotificationFilterPreferences.get(1);
+
+        assertEquals("Page only", filterPreference.getScope());
+        assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".Page1", filterPreference.getLocation());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
+        assertEquals(List.of("Alert"), filterPreference.getFormats());
+        // core.events.delete before core.events.update
+        assertEquals(List.of("A page is deleted", "A page is modified"), filterPreference.getEventTypes());
+
+        // follow a user
+        ProfileUserProfilePage userProfilePage = ProfileUserProfilePage.gotoPage(FIRST_USER_NAME);
+        assertFalse(userProfilePage.isFollowed());
+        userProfilePage.toggleFollowButton();
+
+        notificationsUserProfilePage =
+            NotificationsUserProfilePage.gotoPage(secondUserUsername);
+        notificationsUserProfilePage.setAutoWatchMode(AbstractNotificationsSettingsPage.AutowatchMode.NEW);
+
+        SpaceReference newPagesSpaceRef = new SpaceReference("NewPages", lastSpaceReference);
+        // Create multiple pages
+        for (int i = 0; i < 15; i++) {
+            DocumentReference pageRef = new DocumentReference("Page_" + i, newPagesSpaceRef);
+            testUtils.rest().savePage(pageRef, "Content of page " + i, "Title of page " + i );
+        }
+        String pageSpaceName =
+            NotificationsSettingsIT.class.getSimpleName() + "." + newPagesSpaceRef.getName();
+
+        notificationsUserProfilePage =
+            NotificationsUserProfilePage.gotoPage(secondUserUsername);
+        customPrefLiveData = notificationsUserProfilePage.getCustomNotificationFilterPreferencesLiveData();
+
+        // 4 filters created before following a user
+        // +1 when following the user
+        // +15 when creating the pages after setting autowatch
+        assertEquals(20, customPrefLiveData.getTableLayout().getTotalEntries());
+
+        customPrefLiveData.filterScope("USER");
+        assertEquals(1, customPrefLiveData.getTableLayout().getTotalEntries());
+        filterPreference = customPrefLiveData.getCustomNotificationFilterPreferences().get(0);
+        assertEquals("User", filterPreference.getScope());
+        assertEquals(List.of("Alert", "Email"), filterPreference.getFormats());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
+        assertTrue(filterPreference.getEventTypes().isEmpty());
+        assertEquals("XWiki." + FIRST_USER_NAME, filterPreference.getLocation());
+
+        customPrefLiveData.clearAllFilters();
+        customPrefLiveData.filterLocation(newPagesSpaceRef.getName());
+        // Click twice to order descending
+        customPrefLiveData.sortLocation();
+        customPrefLiveData.sortLocation();
+        assertEquals(15, customPrefLiveData.getTableLayout().getTotalEntries());
+        filterPreference = customPrefLiveData.getCustomNotificationFilterPreferences().get(0);
+        assertEquals("Page only", filterPreference.getScope());
+        assertEquals(List.of("Alert", "Email"), filterPreference.getFormats());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
+        assertTrue(filterPreference.getEventTypes().isEmpty());
+        // Order is alphabetical so Page_9 is > Page_15
+        assertEquals(pageSpaceName + ".Page_9", filterPreference.getLocation());
+
+        customPrefLiveData.clearAllFilters();
+        customPrefLiveData.clearAllSort();
+        assertEquals(20, customPrefLiveData.getTableLayout().getTotalEntries());
+        customPrefLiveData.filterFilterAction("INCLUSIVE");
+        assertEquals(19, customPrefLiveData.getTableLayout().getTotalEntries());
+        customPrefLiveData.filterLocation("2");
+        // 3 possibles matches: Page2,Page_2,Page_12
+        assertEquals(3, customPrefLiveData.getTableLayout().getTotalEntries());
+        customPrefLiveData.sortFormats();
+        customPrefLiveData.sortFormats();
+        filterPreference = customPrefLiveData.getCustomNotificationFilterPreferences().get(0);
+        assertEquals("Page only", filterPreference.getScope());
+        assertEquals(NotificationsSettingsIT.class.getSimpleName() + ".Page2", filterPreference.getLocation());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
+        assertEquals(List.of("Alert"), filterPreference.getFormats());
+        // core.events.delete before core.events.update
+        assertEquals(List.of("A page is deleted","A page is modified"), filterPreference.getEventTypes());
+
+        customPrefLiveData.filterFormat("EMAIL");
+        assertEquals(2, customPrefLiveData.getTableLayout().getTotalEntries());
+        customPrefLiveData.sortLocation();
+
+        filterPreference = customPrefLiveData.getCustomNotificationFilterPreferences().get(0);
+        assertEquals("Page only", filterPreference.getScope());
+        assertEquals(List.of("Alert", "Email"), filterPreference.getFormats());
+        assertEquals(CustomNotificationFilterPreference.FilterAction.NOTIFY_EVENT, filterPreference.getFilterAction());
+        assertTrue(filterPreference.getEventTypes().isEmpty());
+        assertEquals(pageSpaceName + ".Page_12", filterPreference.getLocation());
+    }
+
+    @Test
+    @Order(6)
+    void watchAndRename(TestUtils testUtils, TestReference testReference)
+    {
+        testUtils.login(FIRST_USER_NAME, FIRST_USER_PASSWORD);
+        ViewPage viewPage = testUtils.createPage(testReference, "Content", "Title");
+
+        // Autowatch is enabled for created page
+        NotificationWatchButtonElement watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isWatched());
+        RenamePage renamePage = viewPage.rename();
+        renamePage.getDocumentPicker().setTitle(testReference.getName() + "Renamed");
+        CopyOrRenameOrDeleteStatusPage statusPage = renamePage.clickRenameButton().waitUntilFinished();
+        statusPage.gotoNewPage();
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isWatched());
+
+        testUtils.gotoPage(testReference);
+        watchButtonElement = new NotificationWatchButtonElement();
+        assertTrue(watchButtonElement.isNotSet());
     }
 }
